# agentsploit

./: .gitignore  AUTHORIZATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  authentication.md  cli-reference.md  getting-started.md  mapper.md  poisoning.md  runner.md  sarif.md  transports.md  verifier.md  web-ui.md  writing-modules.md
examples/: agent-anthropic.yaml  agent-http.yaml  agent-mock.yaml  agent-openai.yaml  map-targets.yaml
src/agentsploit/: __init__.py  __main__.py  cli.py  scaffolder.py
src/agentsploit/core/: __init__.py  authorization.py  finding.py  module.py  registry.py  reporter.py  session.py  target.py
src/agentsploit/modules/: __init__.py
src/agentsploit/modules/injection/: __init__.py  generator.py
src/agentsploit/modules/injection/carriers/: __init__.py  base.py  email.py  html.py  ical.py  markdown.py  pdf.py  text.py
src/agentsploit/modules/injection/techniques/: __init__.py  base.py  delimiter.py  direct.py  role_confusion.py  tool_smuggling.py  unicode_tag.py
src/agentsploit/modules/mapper/: __init__.py  builder.py  classifier.py  exporter.py  inference.py  mapper.py  models.py  paths.py
src/agentsploit/modules/mcp/: __init__.py  auth.py  client.py  scanner.py
src/agentsploit/modules/poisoning/: __init__.py  poisoner.py  rag.py  store.py  store_thread.py  store_vector.py  techniques.py  thread.py  tools.py
src/agentsploit/modules/runner/: __init__.py  config.py  detector.py  runner.py  tools.py  trace.py  watcher.py
src/agentsploit/modules/verifier/: __init__.py  batch.py  fuzzer.py  synth_config.py  targeted_techniques.py  techniques.py  verifier.py
src/agentsploit/utils/: logging.py
src/agentsploit/web/: __init__.py  api.py  auth.py  events.py  jobs.py  runners.py  server.py
src/agentsploit/web/frontend/: index.html
tests/: conftest.py
tests/fixtures/benign_mcp/: __init__.py  server.py
tests/fixtures/vulnerable_http_mcp/: __init__.py  server.py
tests/fixtures/vulnerable_mcp/: __init__.py  server.py
tests/fixtures/vulnerable_sink_mcp/: __init__.py  server.py
tests/integration/: test_batch_verifier_end_to_end.py  test_benign_smoke.py  test_fuzzer_end_to_end.py  test_http_mcp_scanner.py  test_mapper_end_to_end.py  test_mcp_scanner.py  test_poisoning_end_to_end.py  test_rag_poisoning_end_to_end.py  test_runner_end_to_end.py  test_sarif_schema.py  test_thread_poisoning_end_to_end.py  test_verifier_end_to_end.py
tests/unit/: test_authorization.py  test_batch_verifier.py  test_canary_detector.py  test_canary_stream_watcher.py  test_checks.py  test_credentials.py  test_cross_platform.py  test_finding.py  test_fuzzer.py  test_generator.py  test_http_adapter.py  test_http_probes.py  test_injection_carriers.py  test_injection_techniques.py  test_mapper_classifier.py  test_mapper_exporter.py  test_mapper_inference.py  test_mapper_paths.py  test_mapper_paths_persistence.py  test_mock_adapter.py  test_mock_adapter_chain.py  test_mock_adapter_streaming.py  test_openai_adapter.py  test_poisoning_store.py  test_poisoning_technique.py  test_poisoning_tools.py  test_rag_technique.py  test_runner_config.py  test_scaffolder.py  test_target.py  test_targeted_techniques.py  test_thread_store.py  test_vector_store.py  test_verifier_synth.py  test_verifier_technique.py  test_web_api.py  test_web_auth.py  test_web_bundle.py  test_web_events.py  test_web_jobs.py  (+1 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: FindingsTable.tsx  GraphView.tsx  Layout.tsx  PathsTable.tsx  RequireAuth.tsx  SeverityBadge.tsx
ui/src/hooks/: useSSE.ts
ui/src/pages/: JobsPage.tsx  Login.tsx  SessionDetail.tsx  SessionsList.tsx
ui/src/types/: react-cytoscapejs.d.ts
(+20 files in other folders)
